--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
-Commit one THIS IS A CHANGE! LET'S SEE HOW IT SHOWS UP AS A CONFLICT
-Commit two
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Untitled</title>
+		<script src = "libraries/p5.js", type="text/javascript"></script>
+		<script src = "sketch.js", type="text/javascript"></script>
+	</head>
+
+<body>
+
+<h1>Title of Page</h1>
+<p> This is a paragraph</p>
+
+</body>
 
 
-Changes to the main branch
-
-Final Revision
+</html>
