--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8">
 		<title>Untitled</title>
 		<script src = "libraries/p5.js", type="text/javascript"></script>
-		<script src = "sketch.js", type="text/javascript"></script>
+		<script src = "TicTacToe.js", type="text/javascript"></script>
 	</head>
 
 <body>
